--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
+@media (max-width: 767px) { /* Adjust the max-width as needed for your design */
+    body {
+        background-attachment: scroll; /* Change to scroll for mobile devices */
+    }
+}
 
 
 h1 {
