--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
-@media (max-width: 767px) { /* Adjust the max-width as needed for your design */
+@media (max-width: 100%) { /* Adjust the max-width as needed for your design */
     body {
         background-attachment: scroll; /* Change to scroll for mobile devices */
     }
