--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     min-width: 100%;
-    min-height: 100%;
+    min-height: auto;
     margin: 0;
     padding: 0;
     overflow-x: hidden; /* Hide horizontal scrollbar */
