--- a/style.css
+++ b/style.css
@@ -1,28 +1,9 @@
- html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-} 
-
-body {
+body{
     background-image: url('images/background.jpg');
+    max-width: 100%;
+    max-height: auto;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* Keep the background fixed */
-    min-width: 100%;
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
-
-/* For screens with a maximum width of 1280px and a maximum height of 720px */
-@media (max-width: 720px) and (max-height: 1280px) {
-    body {
-        background-attachment: scroll; /* Use 'scroll' instead of 'fixed' for screens of this size */
-    }
-}
-
 
 h1 {
     background-color:#111827;
