--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: auto;
 }
+
 
 h1 {
     background-color:#111827;
